--- a/service/templates/user_orders.html
+++ b/service/templates/user_orders.html
@@ -1,21 +1,22 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Your Orders{% endblock %}
+{% block title %}{% trans "Your Orders" %}{% endblock %}
 
 {% block content %}
-<h2>Your orders</h2>
+<h2>{% trans "Your orders" %}</h2>
 <br>
-<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-new' %}">New order</a>
+<a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-new' %}">{% trans "New order" %}</a>
 <br>
 <br>
-<h5>All your orders:</h5>
+<h5>{% trans "All your orders" %}:</h5>
 <br>
 {% if user_orders %}
     <div class="row">
         {% for order in user_orders %}
             <div class="col-md-4 d-flex align-items-stretch">
                 <div class="card mb-4 shadow-sm">
-                    <img src="{{ order.user.profile.picture.url }}" class="card-img-top" alt="profile-picture">
+                    <img src="{{ order.user.profile.picture.url }}" class="card-img-top" alt="{% trans 'profile-picture' %}">
                     <div class="card-body">
                         <p class="card-text">
                             <a href="{% url 'order-details' order.id %}">
@@ -34,8 +35,8 @@
                         </h6>
                         <br>
                         <h6 class="card-subtitle mb-2 text-muted"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">From: {{ order.date|date:"Y-m-d" }}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">Until:
+                        <h6 class="card-subtitle mb-2 text-muted">{% trans "From" %}: {{ order.date|date:"Y-m-d" }}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">{% trans "Until" %}:
                             <span class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}">
                             {{ order.deadline|date:"Y-m-d, H:i" }}
                     </span>
@@ -46,25 +47,25 @@
         {% endfor %}
     </div>
 {% else %}
-    <p>You have no orders at the moment.</p>
+    <p>{% trans "You have no orders at the moment" %}.</p>
 {% endif %}
 <div class="container">
     <ul class="pagination pagination-sm justify-content-center">
         {% if page_obj.has_previous %}
             <li class="page-item">
-                <a href="?page=1" class="page-link">First</a>
+                <a href="?page=1" class="page-link">{% trans "First" %}</a>
             </li>
             <li class="page-item">
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">Previous</a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">{% trans "Previous" %}</a>
             </li>
         {% endif %}
         <li class="page-link active">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</li>
         {% if page_obj.has_next %}
             <li class="page-item">
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link">Next</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link">{% trans "Next" %}</a>
             </li>
             <li class="page-item">
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">Last</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">{% trans "Last" %}</a>
             </li>
         {% endif %}
     </ul>
