--- a/service/templates/cars.html
+++ b/service/templates/cars.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Cars{% endblock %}
+{% block title %}{% trans "Cars" %}{% endblock %}
 
 {% block content %}
 {% load static %}
-<h2>Cars</h2>
+<h2>{% trans "Cars" %}</h2>
 <br>
-<h5>Cars registered in our auto service:</h5>
+<h5>{% trans "Cars registered in our auto service" %}:</h5>
 <br>
 {% if cars %}
     <div class="row">
@@ -14,9 +15,9 @@
             <div class="col-md-4 d-flex align-items-stretch">
                 <div class="card mb-4 shadow-sm">
                     {% if car.photo %}
-                        <img src="{{ car.photo.url }}" class="card-img-top" alt="car-photo">
+                        <img src="{{ car.photo.url }}" class="card-img-top" alt="{% trans 'car-photo' %}">
                     {% else %}
-                        <img src="{% static 'img/no_image.png' %}" class="card-img-top" alt="no-image">
+                        <img src="{% static 'img/no_image.png' %}" class="card-img-top" alt="{% trans 'no-image' %}">
                     {% endif %}
                     <div class="card-body">
                         <p class="card-text">
@@ -39,10 +40,10 @@
         {% endfor %}
     </div>
 {% else %}
-    <p>There are no cars at the moment.</p>
+    <p>{% trans "There are no cars at the moment" %}.</p>
 {% endif %}
 <div class="container">
-    <nav aria-label="...">
+    <nav>
         {% if cars.has_other_pages %}
             <ul class="pagination pagination-sm justify-content-center">
                 {% for i in cars.paginator.page_range %}
