--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -1,35 +1,36 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Order Details{% endblock %}
+{% block title %}{% trans "Order Details" %}{% endblock %}
 
 {% block content %}
-<h2>Order no {{ order.id }}:</h2>
+<h2>{% trans "Order no" %} {{ order.id }}:</h2>
 <hr/>
 {% if order.user == user %}
-    <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-update' order.id %}">Edit order</a>
-    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'order-delete' order.id %}">Delete order</a>
+    <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-update' order.id %}">{% trans "Edit order" %}</a>
+    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'order-delete' order.id %}">{% trans "Delete order" %}</a>
     <br>
     <br>
 {% endif %}
-<p><strong>Status: </strong>{{ order.get_status_display }}</p>
-<p><strong>Date: </strong>{{ order.date }}</p>
-<p><strong>Return date: </strong>{{ order.deadline }}</p>
-<p class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}"><strong>Is overdue: </strong>
-    {% if order.is_overdue %}Yes{% else %}No{% endif %}
+<p><strong>{% trans "Status" %}: </strong>{{ order.get_status_display }}</p>
+<p><strong>{% trans "Date" %}: </strong>{{ order.date }}</p>
+<p><strong>{% trans "Return date" %}: </strong>{{ order.deadline }}</p>
+<p class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}"><strong>{% trans "Is overdue" %}: </strong>
+    {% if order.is_overdue %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}
 </p>
-<p><strong>Client: </strong>{{ order.car.client_name }}</p>
-<p><strong>Car: </strong><a href="{% url 'car-details' order.car.id %}">{{ order.car.car_model }}
+<p><strong>{% trans "Client" %}: </strong>{{ order.car.client_name }}</p>
+<p><strong>{% trans "Car" %}: </strong><a href="{% url 'car-details' order.car.id %}">{{ order.car.car_model }}
     ({{ order.car.license_plate_no }}, {{ order.car.vin_code }})</a></p>
 {% if order.lines.all %}
     <div class="container" style="display: inline-block; padding-top: 20px; padding-left: 20px; width: 80%">
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>Service</th>
-                <th>Item price</th>
-                <th>Quantity</th>
-                <th>Price</th>
-                <th>Actions</th>
+                <th>{% trans "Service" %}</th>
+                <th>{% trans "Item price" %}</th>
+                <th>{% trans "Quantity" %}</th>
+                <th>{% trans "Price" %}</th>
+                <th>{% trans "Actions" %}</th>
             </tr>
             </thead>
             <tbody>
@@ -42,9 +43,9 @@
                     <td>
                         {% if order.user == user %}
                             <a class="btn btn-primary btn-sm mt-1 mb-1"
-                               href="{% url 'order-line-update' order.id line.id %}">Edit</a>
+                               href="{% url 'order-line-update' order.id line.id %}">{% trans "Edit" %}</a>
                             <a class="btn btn-danger btn-sm mt-1 mb-1"
-                               href="{% url 'order-line-delete' order.id line.id %}">Delete</a>
+                               href="{% url 'order-line-delete' order.id line.id %}">{% trans "Delete" %}</a>
                         {% endif %}
                     </td>
                 </tr>
@@ -60,7 +61,7 @@
 {% endif %}
 <br>
 {% if order.user == user %}
-    <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-line-new' order.id %}">Add a service</a>
+    <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order-line-new' order.id %}">{% trans "Add a service" %}</a>
 {% endif %}
 <br>
 <br>
@@ -68,29 +69,29 @@
     <div class="fieldWrapper">
         <hr>
         <br>
-        <h4>Leave a comment:</h4>
+        <h4>{% trans "Leave a comment" %}:</h4>
         <form action="" method="post">
             {% csrf_token %}
             {{ form.text }}
             <br>
             <br>
-            <input type="submit" class="btn btn-primary" value="Post"/>
+            <input type="submit" class="btn btn-primary" value="{% trans 'Post' %}"/>
         </form>
     </div>
 {% endif %}
 <br>
 <br>
-<h3>Comments:</h3>
+<h3>{% trans "Comments" %}:</h3>
 <div class="container" style="display: inline-block; padding-top: 20px; padding-left: 20px; width: 80%">
     {% if order.comments.all %}
         {% for comment in order.comments.all %}
-            <img src="{{ comment.author.profile.picture.url }}" alt="profile-picture" width="40" height="40">
+            <img src="{{ comment.author.profile.picture.url }}" alt="{% trans 'profile-picture' %}" width="40" height="40">
             <strong>{{ comment.author }}</strong>, <em>{{ comment.date }}</em>
             <p>{{ comment.text }}</p>
             <hr>
         {% endfor %}
     {% else %}
-        <p>There are no comments for this order.</p>
+        <p>{% trans "There are no comments for this order" %}.</p>
     {% endif %}
 </div>
 {% endblock %}
