--- a/service/templates/order_form.html
+++ b/service/templates/order_form.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Create or Update Order{% endblock %}
+{% block title %}{% trans "Create or Update Order" %}{% endblock %}
 
 {% block content %}
 <div class="content-section">
-    <form method="post" action="" enctype="multipart/form-data">
+    {% load crispy_forms_tags %}
+    <form method="POST" action="" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Create or update order</legend>
+            <legend class="border-bottom mb-4">{% trans "Create or update order" %}</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">Save</button>
+            <button class="btn btn-primary" type="submit">{% trans "Save" %}</button>
         </div>
     </form>
 </div>
