--- a/service/templates/registration/logged_out.html
+++ b/service/templates/registration/logged_out.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Signed Out{% endblock %}
+{% block title %}{% trans "Signed Out" %}{% endblock %}
 
 {% block content %}
 <div class="container" style="display: inline-block; width: 70%">
-    <h5>You have been successfully signed out.</h5>
+    <h5>{% trans "You have been successfully signed out" %}.</h5>
     <br>
-    <a href="{% url 'login' %}">Sign in again</a>
+    <a href="{% url 'login' %}">{% trans "Sign in again" %}</a>
 </div>
 {% endblock %}
