--- a/service/templates/registration/login.html
+++ b/service/templates/registration/login.html
@@ -1,31 +1,32 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Sign In{% endblock %}
+{% block title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
 <div class="container" style="display: inline-block; width: 70%">
-    <h2>Sign in</h2>
+    <h2>{% trans "Sign in" %}</h2>
     <br>
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="id_username">Username:</label>
+            <label for="id_username">{% trans "Username" %}:</label>
             <br>
             {{ form.username }}
         </div>
         <br>
         <div class="form-group">
-            <label for="id_password">Password:</label>
+            <label for="id_password">{% trans "Password" %}:</label>
             <br>
             {{ form.password }}
         </div>
         <br>
         {% if form.errors %}
-            <p class="text-danger">An error occurred while signing you in, please try again.</p>
+            <p class="text-danger">{% trans "An error occurred while signing you in, please try again" %}.</p>
         {% endif %}
-        <input type="submit" class="btn btn-primary" value="Sign in"/>
+        <input type="submit" class="btn btn-primary" value="{% trans 'Sign in' %}"/>
     </form>
     <br>
-    <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+    <p><a href="{% url 'password_reset' %}">{% trans "Forgot password" %}?</a></p>
 </div>
 {% endblock %}
