--- a/service/templates/registration/password_reset_complete.html
+++ b/service/templates/registration/password_reset_complete.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Reset Password{% endblock %}
+{% block title %}{% trans "Reset Password" %}{% endblock %}
 
 {% block content %}
-<h3>Password changed successfully!</h3>
+<h3>{% trans "Password changed successfully" %}!</h3>
 <br>
-<h5><a href="{% url 'login' %}">Sign in</a></h5>
+<h5><a href="{% url 'login' %}">{% trans "Sign in" %}</a></h5>
 {% endblock %}
