--- a/service/templates/registration/password_reset_confirm.html
+++ b/service/templates/registration/password_reset_confirm.html
@@ -1,33 +1,32 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Reset Password{% endblock %}
+{% block title %}{% trans "Reset Password" %}{% endblock %}
 
 {% block content %}
 <div class="container" style="display: inline-block; width: 70%">
     {% if validlink %}
-        <h5>Enter and then confirm your new password:</h5>
+        <h5>{% trans "Enter and then confirm your new password" %}:</h5>
         <br>
         <form action="" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="id_new_password1">New Password:</label>
+                <label for="id_new_password1">{% trans "New Password" %}:</label>
                 <br>
                 {{ form.new_password1 }}
             </div>
             <br>
             <div class="form-group">
-                <label for="id_new_password2">Confirm Password:</label>
+                <label for="id_new_password2">{% trans "Confirm Password" %}:</label>
                 <br>
                 {{ form.new_password2 }}
             </div>
             <br>
-            <input type="submit" class="btn btn-primary" value="Reset"/>
+            <input type="submit" class="btn btn-primary" value="{% trans 'Reset' %}"/>
         </form>
     {% else %}
-        <h4>Password change unsuccessful</h4>
-        <p>The password reset link is invalid, possibly because it has already been used.
-            Please request a new password reset.
-        </p>
+        <h4>{% trans "Password change unsuccessful" %}</h4>
+        <p>{% trans "The password reset link is invalid, possibly because it has already been used. Please request a new password reset." %}</p>
     {% endif %}
 </div>
 {% endblock %}
