--- a/service/templates/registration/password_reset_done.html
+++ b/service/templates/registration/password_reset_done.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Reset Password{% endblock %}
+{% block title %}{% trans "Reset Password" %}{% endblock %}
 
 {% block content %}
-<h5>Check your inbox!</h5>
+<h5>{% trans "Check your inbox" %}!</h5>
 <br>
-<p>The email with the password reset link has been sent to you.</p>
+<p>{% trans "The email with the password reset link has been sent to you" %}.</p>
 {% endblock %}
