--- a/service/templates/registration/password_reset_form.html
+++ b/service/templates/registration/password_reset_form.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Reset Password{% endblock %}
+{% block title %}{% trans "Reset Password" %}{% endblock %}
 
 {% block content %}
 <form action="" method="post">
@@ -8,15 +9,15 @@
     {% if form.email.errors %}
         {{ form.email.errors }}
     {% endif %}
-    <h5>Forgot your password?</h5>
+    <h5>{% trans "Forgot your password" %}?</h5>
     <br>
-    <p>Enter your email address below and we'll send you password reset instructions.</p>
+    <p>{% trans "Enter your email address below and we'll send you password reset instructions" %}.</p>
     <div class="form-group">
-        <label for="id_email">Email:</label>
+        <label for="id_email">{% trans "Email" %}:</label>
         <br>
         {{ form.email }}
     </div>
     <br>
-    <input type="submit" class="btn btn-primary" value="Reset password"/>
+    <input type="submit" class="btn btn-primary" value="{% trans 'Reset password' %}"/>
 </form>
 {% endblock %}
