--- a/service/templates/registration/register.html
+++ b/service/templates/registration/register.html
@@ -1,47 +1,44 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}{% trans "Sign Up" %}{% endblock %}
 
 {% block content %}
     <div class="container" style="display: inline-block; width: 70%">
-        <h2>Sign up</h2>
+        <h2>{% trans "Sign up" %}</h2>
         <br>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username">Username:</label>
+                <label for="username">{% trans "Username" %}:</label>
                 <input name="username" type="text" minlength="5" class="form-control" id="username"
                        aria-describedby="usernameHelp">
-                <small id="usernameHelp" class="form-text text-muted">Up to 150 characters.</small>
+                <small id="usernameHelp" class="form-text text-muted">{% trans "Up to 150 characters" %}.</small>
             </div>
             <br>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input name="email" type="email" class="form-control" id="email"
                        aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">We will not share your email with anyone nor send you
-                    any spam. Your email is required to send you a new password.
-                </small>
+                <small id="emailHelp" class="form-text text-muted">{% trans "We will not share your email with anyone nor send you any spam. Your email is required to send you a password reset link." %}</small>
             </div>
             <br>
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="password">{% trans "Password" %}:</label>
                 <input name="password" type="password" minlength="8" class="form-control" id="password"
                        aria-describedby="pwdHelp">
-                <small id="pwdHelp" class="form-text text-muted">Minimum 8 characters, at least one letter and one
-                    number.
-                </small>
+                <small id="pwdHelp" class="form-text text-muted">{% trans "Minimum 8 characters, at least one letter and one number" %}.</small>
             </div>
             <br>
             <div class="form-group">
-                <label for="password2">Confirm password:</label>
+                <label for="password2">{% trans "Confirm password" %}:</label>
                 <input name="password2" type="password" minlength="8" class="form-control" id="password2"
                        aria-describedby="pwd2Help">
             </div>
             <br>
-            <button type="submit" class="btn btn-primary">Sign up</button>
+            <button type="submit" class="btn btn-primary">{% trans "Sign up" %}</button>
         </form>
         <br>
-        <p>If you already have an account, <a href="{% url 'login' %}"><strong>Sign in.</strong></a></p>
+        <p>{% trans "If you already have an account," %} <a href="{% url 'login' %}"><strong>{% trans "Sign in" %}.</strong></a></p>
     </div>
 {% endblock %}
