--- a/service/templates/service_details.html
+++ b/service/templates/service_details.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Service Details{% endblock %}
+{% block title %}{% trans "Service Details" %}{% endblock %}
 
 {% block content %}
 <h2>{{ service.name }}</h2>
-<p><strong>Price: </strong>{{ service.price }} €</p>
-<p><strong>Description: </strong>{{ service.description }}</p>
+<p><strong>{% trans "Price" %}: </strong>{{ service.price }} €</p>
+<p><strong>{% trans "Description" %}: </strong>{{ service.description }}</p>
 {% endblock %}
