[Problem P36] Add translations for email template as well.

--- a/service/templates/registration/password_reset_email.html
+++ b/service/templates/registration/password_reset_email.html
@@ -1,9 +1,10 @@
-Hello,
+{% load i18n %}
+{% trans "Hello" %},
 
-Someone requested a password reset for our site. If this was a mistake, just ignore this email and nothing will happen.
-If it was you, follow the link below to reset your password:
+{% trans "Someone requested a password reset for our site. If this was a mistake, just ignore this email and nothing will happen." %}
+{% trans "If it was you, follow the link below to reset your password" %}:
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-Regards,
+{% trans "Regards" %},
 
 Car Heaven
