--- a/service/templates/registration/password_reset_confirm.html
+++ b/service/templates/registration/password_reset_confirm.html
@@ -24,9 +24,12 @@
             <br>
             <input type="submit" class="btn btn-primary" value="{% trans 'Reset' %}"/>
         </form>
-    {% else %}
         <h4>{% trans "Password change unsuccessful" %}</h4>
-        <p>{% trans "The password reset link is invalid, possibly because it has already been used. Please request a new password reset." %}</p>
+        {% blocktrans %}
+            <p>The password reset link is invalid, possibly because it has already been used. Please request a new
+                password reset.</p>
+        {% endblocktrans %}
+    {% else %}
     {% endif %}
 </div>
 {% endblock %}
