--- a/service/templates/registration/password_reset_email.html
+++ b/service/templates/registration/password_reset_email.html
@@ -1,10 +1,11 @@
 {% load i18n %}
-{% trans "Hello" %},
+{% blocktrans %}
+Hello,
 
-{% trans "Someone requested a password reset for our site. If this was a mistake, just ignore this email and nothing will happen." %}
-{% trans "If it was you, follow the link below to reset your password" %}:
+Someone requested a password reset for our site. If this was a mistake, just ignore this email and nothing will happen.
+If it was you, follow the link below to reset your password:
+{% endblocktrans %}
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
 {% trans "Regards" %},
-
 Car Heaven
