--- a/service/templates/registration/register.html
+++ b/service/templates/registration/register.html
@@ -20,14 +20,21 @@
                 <label for="email">Email:</label>
                 <input name="email" type="email" class="form-control" id="email"
                        aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">{% trans "We will not share your email with anyone nor send you any spam. Your email is required to send you a password reset link." %}</small>
+                <small id="emailHelp" class="form-text text-muted">
+                    {% blocktrans %}
+                        We will not share your email with anyone nor send you any spam. Your email is required to send
+                        you a password reset link.
+                    {% endblocktrans %}
+                </small>
             </div>
             <br>
             <div class="form-group">
                 <label for="password">{% trans "Password" %}:</label>
                 <input name="password" type="password" minlength="8" class="form-control" id="password"
                        aria-describedby="pwdHelp">
-                <small id="pwdHelp" class="form-text text-muted">{% trans "Minimum 8 characters, at least one letter and one number" %}.</small>
+                <small id="pwdHelp" class="form-text text-muted">
+                    {% trans "Minimum 8 characters, at least one letter and one number" %}.
+                </small>
             </div>
             <br>
             <div class="form-group">
@@ -39,6 +46,8 @@
             <button type="submit" class="btn btn-primary">{% trans "Sign up" %}</button>
         </form>
         <br>
-        <p>{% trans "If you already have an account," %} <a href="{% url 'login' %}"><strong>{% trans "Sign in" %}.</strong></a></p>
+        <p>{% trans "If you already have an account," %}
+            <a href="{% url 'login' %}"><strong>{% trans "Sign in" %}.</strong></a>
+        </p>
     </div>
 {% endblock %}
