--- a/service/templates/service_details.html
+++ b/service/templates/service_details.html
@@ -6,5 +6,5 @@
 {% block content %}
 <h2>{{ service.name }}</h2>
 <p><strong>{% trans "Price" %}: </strong>{{ service.price }} €</p>
-<p><strong>{% trans "Description" %}: </strong>{{ service.description }}</p>
+<p><strong>{% trans "Description" %}: </strong>{{ service.description|safe }}</p>
 {% endblock %}
